# messages

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakeprep.sh  compile.sh  concept.proto  data_device.hpp  data_handler.hpp  data_readers.hpp  function_enum_generator  function_enumerants.hpp  message_device.hpp  message_handler.hpp  message_handler_response.hpp  message_reader_base.hpp  message_reader_client.hpp  message_reader_server.hpp  message_readers.hpp  message_readers_generator  message_types.hpp  message_types_generator  meta.pb.cc  meta.pb.h  meta.proto  noval.hpp  protocol_device.hpp  sc_parser  setup.proto  spatial.pb.h  spatial.proto  system.pb.h  system.proto  vector.pb.cc  vector.pb.h  vector.proto  xcmessages.odt
bindings/cpp/: meta.pb.cc  meta.pb.h  spatial.pb.cc  spatial.pb.h  system.pb.cc  system.pb.h  vector.pb.cc  vector.pb.h
bindings/csharp/: Meta.cs  Spatial.cs  System.cs  Vector.cs
bindings/java/Messages/: MetaOuterClass.java  Spatial.java  SystemOuterClass.java  Vector.java
bindings/javascript/: meta_pb.js  spatial_pb.js  system_pb.js  vector_pb.js
bindings/objc/: Meta.pbobjc.h  Meta.pbobjc.m  Spatial.pbobjc.h  Spatial.pbobjc.m  System.pbobjc.h  System.pbobjc.m  Vector.pbobjc.h  Vector.pbobjc.m
bindings/php/GPBMetadata/: Meta.php  Spatial.php  System.php  Vector.php
bindings/php/Messages/: Command.php  Elements.php  Extrema.php  GraphicsControl.php  GridControl.php  Indices.php  MeshControl.php  Meta.php  Model.php  NetworkControl.php  PBFunction.php  Representation.php  Revision.php  Rule.php  Script.php  SliceControl.php  System.php  Topology.php  TracersControl.php  TreeControl.php  Variables.php  Vector32.php  Vector64.php  Visual.php  Zone.php
bindings/python/: meta_pb2.py  spatial_pb2.py  system_pb2.py  vector_pb2.py
bindings/ruby/: meta_pb.rb  spatial_pb.rb  system_pb.rb  vector_pb.rb
doc/: xcmessages.odt
examples/hello_vector/: Makefile  build.sh  load.sh  load_app  load_msg.cpp  save.sh  save_app  save_msg.cpp  save_vector.cpp  sweep.xco  vector.pb.h
examples/hello_vector/c++/: load_vector.cpp
examples/hello_vector/cpp/: build.sh  save_vector.cpp
examples/hello_vector/python/: load.sh  load_vector.py  save.sh
examples/python/: load_vector.py  save_vector.py  unittest_messages.py
examples/xco2csv/: Makefile  build.sh  xco2csv.cpp  xco2csv.hpp
install/: install-protobuf-offline.sh  install-protobuf-online.sh  install-protobuf.sh  protobuf-rlse.py
